
## Fixes
- `gui/launcher`: fix history scanning (Up/Down arrow keys) being slow to respond when in minimal mode
- `control-panel`: fix filtering not filtering when running the ``list`` command

## Misc Improvements
- `gui/launcher`: add interface for browsing and filtering commands by tags
- `gui/launcher`: add support for history search (Alt-s hotkey) when in minimal mode
- `control-panel`: enable tweaks quietly on fort load so we don't spam the console
- `devel/tile-browser`: simplify interface now that SDL automatically normalizes texture scale
- `exterminate`: make race name matching case and space insensitive

## Removed

# 50.12-r1

## Fixes
- `gui/notify`: persist notification settings when toggled in the UI

## Misc Improvements
- `gui/launcher`: developer mode hotkey restored to Ctrl-D

# 50.11-r7

## New Tools
- `undump-buildings`: (reinstated) remove dump designation from in-use building materials
- `gui/petitions`: (reinstated) show outstanding (or all historical) petition agreements for guildhalls and temples
- `gui/notify`: display important notifications that vanilla doesn't support yet and provide quick zoom links to notification targets.
- `list-waves`: (reinstated) show migration wave information
- `make-legendary`: (reinstated) make a dwarf legendary in specified skills
- `combat-harden`: (reinstated) set a dwarf's resistence to being affected by visible corpses
- `add-thought`: (reinstated) add custom thoughts to a dwarf
- `devel/input-monitor`: interactive UI for debugging input issues

## Fixes
- `gui/design`: clicking the center point when there is a design mark behind it will no longer simultaneously enter both mark dragging and center dragging modes. Now you can click once to move the shape, and click twice to move only the mark behind the center point.
- `fix/retrieve-units`: prevent pulling in duplicate units from offscreen